@@ -14,9 +14,10 @@ import org.broadinstitute.consent.http.db.UserDAO;
 import org.broadinstitute.consent.http.db.VoteDAO;
 import org.broadinstitute.consent.http.enumeration.ElectionType;
 import org.broadinstitute.consent.http.enumeration.UserRoles;
-import org.broadinstitute.consent.http.mail.MailService;
+import org.broadinstitute.consent.http.mail.SendGridAPI;
 import org.broadinstitute.consent.http.mail.freemarker.FreeMarkerTemplateHelper;
 import org.broadinstitute.consent.http.mail.message.DatasetApprovedMessage;
+import org.broadinstitute.consent.http.mail.message.DatasetDeniedMessage;
 import org.broadinstitute.consent.http.models.Consent;
 import org.broadinstitute.consent.http.models.DarCollection;
 import org.broadinstitute.consent.http.models.DataAccessRequest;
@@ -50,7 +51,7 @@ public class EmailNotifierService {
     private final MailMessageDAO emailDAO;
     private final VoteDAO voteDAO;
     private final FreeMarkerTemplateHelper templateHelper;
-    private final MailService mailService;
+    private final SendGridAPI sendGridAPI;
     private final String SERVER_URL;
     private final boolean isServiceActive;
 
@@ -58,7 +59,6 @@ public class EmailNotifierService {
     private static final String LOG_VOTE_ACCESS_URL = "access_review";
     private static final String COLLECT_VOTE_ACCESS_URL = "access_review_results";
     private static final String COLLECT_VOTE_DUL_URL = "dul_review_results";
-    private static final String REVIEW_RESEARCHER_URL = "researcher_review";
 
     public enum ElectionTypeString {
 
@@ -89,7 +89,7 @@ public class EmailNotifierService {
     @Inject
     public EmailNotifierService(DarCollectionDAO collectionDAO, ConsentDAO consentDAO,
                                 VoteDAO voteDAO, ElectionDAO electionDAO,
-                                UserDAO userDAO, MailMessageDAO emailDAO, MailService mailService,
+                                UserDAO userDAO, MailMessageDAO emailDAO, SendGridAPI sendGridAPI,
                                 FreeMarkerTemplateHelper helper, String serverUrl, boolean serviceActive) {
         this.collectionDAO = collectionDAO;
         this.consentDAO = consentDAO;
@@ -98,7 +98,7 @@ public class EmailNotifierService {
         this.voteDAO = voteDAO;
         this.templateHelper = helper;
         this.emailDAO = emailDAO;
-        this.mailService = mailService;
+        this.sendGridAPI = sendGridAPI;
         this.SERVER_URL = serverUrl;
         this.isServiceActive = serviceActive;
     }
@@ -117,11 +117,11 @@ public class EmailNotifierService {
             List<User> distinctUsers = Streams.concat(admins.stream(), chairPersons.stream())
                 .filter(u -> Boolean.TRUE.equals(u.getEmailPreference()))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
             for (User user : distinctUsers) {
                 Writer template = templateHelper.getNewDARRequestTemplate(SERVER_URL, user.getDisplayName(), collection.getDarCode());
                 Map<String, String> data = retrieveForNewDAR(collection.getDarCode(), user);
-                mailService.sendNewDARRequests(getEmails(List.of(user)), data.get("entityId"), data.get("electionType"), template);
+                sendGridAPI.sendNewDARRequests(user.getEmail(), data.get("entityId"), data.get("electionType"), template);
                 emailDAO.insertBulkEmailNoVotes(List.of(user.getUserId()), collection.getDarCode(), 4, new Date(), template.toString());
             }
         }
@@ -136,8 +136,7 @@ public class EmailNotifierService {
                 Map<String, String> data = retrieveForCollect(electionId, chair);
                 String collectUrl = generateCollectVoteUrl(SERVER_URL, data.get("electionType"), data.get("entityId"), data.get("electionId"));
                 Writer template = templateHelper.getCollectTemplate(data.get("userName"), data.get("electionType"), data.get("entityName"), collectUrl);
-                Set<String> emails = Set.of(data.get("email"));
-                mailService.sendCollectMessage(emails, data.get("entityName"), data.get("electionType"), template);
+                sendGridAPI.sendCollectMessage(data.get("email"), data.get("entityName"), data.get("electionType"), template);
                 emailDAO.insertEmail(null, data.get("electionId"), Integer.valueOf(data.get("dacUserId")), 1, new Date(), template.toString());
             }
         }
@@ -148,8 +147,7 @@ public class EmailNotifierService {
             Map<String, String> data = retrieveForVote(voteId);
             String voteUrl = generateUserVoteUrl(SERVER_URL, data.get("electionType"), data.get("voteId"), data.get("entityId"), data.get("rpVoteId"));
             Writer template = templateHelper.getReminderTemplate(data.get("userName"), data.get("electionType"), data.get("entityName"), voteUrl);
-            Set<String> emails = Set.of(data.get("email"));
-            mailService.sendReminderMessage(emails, data.get("entityName"), data.get("electionType"), template);
+            sendGridAPI.sendReminderMessage(data.get("email"), data.get("entityName"), data.get("electionType"), template);
             emailDAO.insertEmail(voteId, data.get("electionId"), Integer.valueOf(data.get("dacUserId")), 3, new Date(), template.toString());
             voteDAO.updateVoteReminderFlag(voteId, true);
         }
@@ -187,7 +185,7 @@ public class EmailNotifierService {
     public void sendDisabledDatasetsMessage(User user, List<String> disabledDatasets, String dataAcessRequestId) throws MessagingException, IOException, TemplateException {
         if(isServiceActive){
             Writer template = templateHelper.getDisabledDatasetsTemplate(user.getDisplayName(), disabledDatasets, dataAcessRequestId, SERVER_URL);
-            mailService.sendDisabledDatasetMessage(getEmails(Collections.singletonList(user)), dataAcessRequestId, null, template);
+            sendGridAPI.sendDisabledDatasetMessage(user.getEmail(), dataAcessRequestId, null, template);
         }
     }
 
@@ -206,9 +204,9 @@ public class EmailNotifierService {
                 reviewedDatasets.put(darCode, dsElections);
             }
             List<User> users = userDAO.describeUsersByRoleAndEmailPreference(UserRoles.ADMIN.getRoleName(), true);
-            if(CollectionUtils.isNotEmpty(users)) {
+            if (CollectionUtils.isNotEmpty(users)) {
                 Writer template = templateHelper.getClosedDatasetElectionsTemplate(reviewedDatasets, "", "", SERVER_URL);
-                mailService.sendClosedDatasetElectionsMessage(getEmails(users), "", "", template);
+                users.forEach(u -> sendGridAPI.sendClosedDatasetElectionsMessage(u.getEmail(), "", "", template));
             }
 
         }
@@ -218,7 +216,7 @@ public class EmailNotifierService {
         if(isServiceActive){
             for(User admin: admins) {
                 Writer template = templateHelper.getAdminApprovedDarTemplate(admin.getDisplayName(), darCode, dataOwnersDataSets, SERVER_URL);
-                mailService.sendFlaggedDarAdminApprovedMessage(getEmails(Collections.singletonList(admin)), darCode, SERVER_URL, template);
+                sendGridAPI.sendFlaggedDarAdminApprovedMessage(admin.getEmail(), darCode, SERVER_URL, template);
             }
         }
     }
@@ -227,7 +225,7 @@ public class EmailNotifierService {
         if(isServiceActive){
             User user = userDAO.findUserById(researcherId);
             Writer template = templateHelper.getResearcherDarApprovedTemplate(darCode, user.getDisplayName(), datasets, dataUseRestriction, user.getEmail());
-            mailService.sendNewResearcherApprovedMessage(getEmails(Collections.singletonList(user)), template, darCode);
+            sendGridAPI.sendNewResearcherApprovedMessage(user.getEmail(), template, darCode);
         }
     }
 
@@ -239,7 +237,7 @@ public class EmailNotifierService {
         if (isServiceActive) {
             Writer template = templateHelper.getDataCustodianApprovalTemplate(datasets,
                     dataDepositorName, darCode, researcherEmail);
-            mailService.sendDataCustodianApprovalMessage(toAddress, darCode, template);
+            sendGridAPI.sendDataCustodianApprovalMessage(toAddress, darCode, template);
         }
     }
 
@@ -249,7 +247,7 @@ public class EmailNotifierService {
                                            String datasetName) throws Exception {
         if (isServiceActive) {
             Writer template = templateHelper.getDatasetApprovedTemplate(dataSubmitterName, datasetName, dacName);
-            mailService.sendDatasetApprovedMessage(toAddress, template);
+            sendGridAPI.sendDatasetApprovedMessage(toAddress, template);
         }
     }
 
@@ -259,7 +257,7 @@ public class EmailNotifierService {
                                            String datasetName) throws Exception {
         if (isServiceActive) {
             Writer template = templateHelper.getDatasetDeniedTemplate(dataSubmitterName, datasetName, dacName);
-            mailService.sendDatasetDeniedMessage(toAddress, template);
+            sendGridAPI.sendDatasetDeniedMessage(toAddress, template);
         }
     }
 
@@ -280,7 +278,7 @@ public class EmailNotifierService {
     }
 
     private void sendNewCaseMessage(Set<String> userAddress, String electionType, String entityId, Writer template) throws MessagingException {
-        mailService.sendNewCaseMessage(userAddress, entityId, electionType, template);
+        userAddress.forEach(u -> sendGridAPI.sendNewCaseMessage(u, entityId, electionType, template));
     }
 
     private String generateUserVoteUrl(String serverUrl, String electionType, String voteId, String entityId, String rpVoteId) {
